--- a/reg.html
+++ b/reg.html
@@ -1,1 +1,106 @@
-registration form
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Registration Form</title>
+  <style>
+    body { font-family: Arial, sans-serif; background: #f6f8fb; margin: 0; padding: 40px; }
+    .container { max-width: 480px; margin: 0 auto; background: #fff; padding: 24px; border-radius: 8px; box-shadow: 0 6px 18px rgba(18,38,63,0.08);} 
+    h1 { margin-top: 0; font-size: 20px; }
+    label { display: block; margin: 12px 0 6px; font-weight: 600; }
+    input[type="text"], input[type="email"], input[type="password"], input[type="tel"], input[type="date"], select, textarea {
+      width: 100%; padding: 8px 10px; border: 1px solid #dfe6ef; border-radius: 6px; box-sizing: border-box;
+    }
+    .row { display: flex; gap: 12px; }
+    .row .col { flex: 1; }
+    .small { font-size: 13px; color: #6b7280; margin-top: 6px; }
+    .actions { margin-top: 16px; display: flex; justify-content: space-between; align-items: center; }
+    .btn { background: #2563eb; color: white; padding: 10px 16px; border: none; border-radius: 6px; cursor: pointer; }
+    .btn.secondary { background: #e6eefc; color: #1e3a8a; }
+    .error { color: #b91c1c; font-size: 13px; }
+    .terms { display: flex; align-items: center; gap: 8px; margin-top: 12px; }
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Create an account</h1>
+    <form id="regForm" action="#" method="post" onsubmit="return handleSubmit(event)">
+      <label for="firstName">First name</label>
+      <input id="firstName" name="firstName" type="text" placeholder="John" required>
+
+      <label for="lastName">Last name</label>
+      <input id="lastName" name="lastName" type="text" placeholder="Doe" required>
+
+      <label for="email">Email</label>
+      <input id="email" name="email" type="email" placeholder="you@example.com" required>
+
+      <div class="row">
+        <div class="col">
+          <label for="password">Password</label>
+          <input id="password" name="password" type="password" placeholder="Enter password" minlength="6" required>
+        </div>
+        <div class="col">
+          <label for="confirmPassword">Confirm password</label>
+          <input id="confirmPassword" name="confirmPassword" type="password" placeholder="Confirm" minlength="6" required>
+        </div>
+      </div>
+
+      <label for="phone">Phone</label>
+      <input id="phone" name="phone" type="tel" placeholder="+1 555 555 5555">
+
+      <label for="dob">Date of birth</label>
+      <input id="dob" name="dob" type="date">
+
+      <label for="gender">Gender</label>
+      <select id="gender" name="gender">
+        <option value="">Select...</option>
+        <option value="female">Female</option>
+        <option value="male">Male</option>
+        <option value="other">Other</option>
+        <option value="prefer_not">Prefer not to say</option>
+      </select>
+
+      <label for="bio">Short bio</label>
+      <textarea id="bio" name="bio" rows="3" placeholder="Tell us a little about yourself (optional)"></textarea>
+
+      <div class="terms">
+        <input id="terms" name="terms" type="checkbox" required>
+        <label for="terms">I agree to the <a href="#">terms and conditions</a>.</label>
+      </div>
+
+      <div id="error" class="error" aria-live="polite"></div>
+
+      <div class="actions">
+        <button type="submit" class="btn">Register</button>
+        <button type="reset" class="btn secondary">Reset</button>
+      </div>
+    </form>
+  </div>
+
+  <script>
+    function handleSubmit(e) {
+      e.preventDefault();
+      const pw = document.getElementById('password').value;
+      const cpw = document.getElementById('confirmPassword').value;
+      const errorEl = document.getElementById('error');
+      errorEl.textContent = '';
+
+      if (pw !== cpw) {
+        errorEl.textContent = 'Passwords do not match.';
+        return false;
+      }
+
+      // Gather form data (for demo only — replace with real submission)
+      const form = document.getElementById('regForm');
+      const data = new FormData(form);
+      const obj = Object.fromEntries(data.entries());
+
+      // Simple success flow
+      alert('Registration successful for ' + obj.firstName + ' ' + obj.lastName + ' (email: ' + obj.email + ')');
+      form.reset();
+      return true;
+    }
+  </script>
+</body>
+</html>
