Add comment to reg.html for clarity

--- a/reg.html
+++ b/reg.html
@@ -60,7 +60,7 @@
         <option value="other">Other</option>
         <option value="prefer_not">Prefer not to say</option>
       </select>
-
+<!-- this is the new line -->
       <label for="bio">Short bio</label>
       <textarea id="bio" name="bio" rows="3" placeholder="Tell us a little about yourself (optional)"></textarea>
 
